--- a/FirstProject/style.css
+++ b/FirstProject/style.css
@@ -1,6 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
+/* Définition des polices personnalisées */
+
+@font-face
+{
+    font-family: 'BallparkWeiner';
+    src: url('polices/ballpark.eot');
+    src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'),
+         url('polices/ballpark.woff') format('woff'),
+         url('polices/ballpark.ttf') format('truetype'),
+         url('polices/ballpark.svg#BallparkWeiner') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face
+{
+    font-family: 'Dayrom';
+    src: url('polices/dayrom.eot');
+    src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
+         url('polices/dayrom.woff') format('woff'),
+         url('polices/dayrom.ttf') format('truetype'),
+         url('polices/dayrom.svg#Dayrom') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
 	background: url('images/fond_jaune.png');
 }
@@ -8,7 +34,7 @@ body {
 div.contenu-principal {
 	display: flex;
 	flex-direction: column;
-	width: 80%;
+	width: 70%;
 	margin: auto;
 }
 
@@ -30,7 +56,7 @@ header .logo img {
 }
 
 header .logo h1 {
-	font-family: Open Sans, sans-serif;
+	font-family: BallparkWeiner, sans-serif;
 	margin-top: -.6rem;
 	margin-left: 5rem;
 }
@@ -79,10 +105,10 @@ div.banner img {
 }
 
 div.banner .banner-card {
-	width: 78.2%;
+	width: 68.3%;
 	padding-right: .7rem;
 	position: absolute;
-	top: 22rem;
+	top: 20rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -113,4 +139,129 @@ div.banner .banner-card a:hover {
 
 div.banner .banner-card a i {
 	padding: .4rem;
+}
+
+/*  Ma section */
+
+section {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+section .aside-left {
+	width: 650px;
+}
+
+section .aside-left p {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	text-align: justify;
+	font-family: arial, sans-serif;
+}
+
+section .aside-left p span {
+	text-transform: uppercase;
+	font-family: arial, sans-serif;
+	font-size: 20px;
+	margin-left: .2rem;
+}
+
+section .aside-right {
+	width: 280px;
+	display: flex;
+	align-items: center;
+}
+
+section .aside-right + img {
+	width: 15px;
+	height: 15px;
+}
+
+section .aside-right div.desc-auteur {
+	background: #777;
+	padding: .1rem .5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 10px;
+}
+
+section .aside-right div.desc-auteur span {
+	text-transform: uppercase;
+	color: #ffffff;
+	padding: .5rem .1rem;
+}
+
+section .aside-right div.desc-auteur p {
+	text-align: justify;
+	color: #ffffff;
+}
+
+/*  Mon footer */
+footer {
+	display: flex;
+	flex-direction: column;
+}
+
+footer img {
+	width: 38px;
+	height: 30px;
+	margin: auto;
+	margin-top: -1.5rem;
+}
+
+footer div.content {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+footer div.content div.amis {
+	display: flex;
+	flex-direction: column;
+}
+
+footer div.content div.amis div.left {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+footer div.content div.history h4,
+footer div.content div.photo h4,
+footer div.content div.amis h4 {
+	text-transform: uppercase;
+	font-family: arial, sans-serif;
+	color: #777;
+}
+
+footer div.content div.history h4 {
+	margin-top: -1rem;
+}
+
+/*footer div.content div.amis h4 {
+	margin-top: -1rem;
+}*/
+
+footer div.content div.photo h4 {
+
+}
+
+footer div.content div.history p {
+	margin-top: 1rem;
+}
+
+footer div.content div.photo {
+	margin-top: -1rem;
+}
+
+footer div.content div.photo img {
+	width: 80px;
+	height: 80px;
+	margin-top: 2px;
+}
+
+footer div.content div.amis div.left ul {
+	list-style-image: url('images/ico_liensexterne.png');
 }
