--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -45,7 +45,7 @@ ul li a:hover {
 
 header {
 	display: flex;
-	flex-wrap: wrap;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	background: url('images/img9.jpg');
