--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -52,7 +52,7 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	padding: 2rem 0rem;
+	padding: 4rem 0rem;
 }
 
 header h1 {
@@ -60,9 +60,16 @@ header h1 {
 }
 
 header button {
-	
 	outline: none;
 	cursor: pointer;
+	padding: .6rem 1rem;
+	color: #222;
+	margin-top: 2rem;
+}
+
+header em {
+	color: #ffffff;
+	font-style: italic;
 }
 
 header img {
