--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap');
+
 body {
 	padding: 0;
 	margin: 0;
@@ -56,6 +58,7 @@ header {
 }
 
 header h1 {
+	font-family: Playfair Display;
 	color: #ffffff;
 }
 
