--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -54,7 +54,8 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	padding: 4rem 0rem;
+	width: 100%;
+	height: 100vh;
 }
 
 header h1 {
