--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -88,7 +88,7 @@ section.section-comp {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 60%;
+	width: 840px;
 	margin: auto;
 }
 
