--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -92,6 +92,12 @@ section.section-comp {
 	margin: auto;
 }
 
+section.section-comp h1 {
+	text-align: center;
+	text-transform: uppercase;
+	color: #C60030;
+}
+
 section.section-comp table.table-comp {
 	border: 1px solid #000000;
 	border-collapse: collapse;
