--- a/myVitrine/style.css
+++ b/myVitrine/style.css
@@ -4,7 +4,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Playfair Display;
+	font-family: arial;
+}
+
+body {
+	min-height: 1000px;
 }
 
 p {
@@ -50,4 +54,62 @@ p {
 	text-decoration: none;
 	letter-spacing: 2px;
 	transition: 0.5s;
+}
+
+.btn:hover {
+	letter-spacing: 6px;
+}
+
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 40px 100px;
+	z-index: 10000;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	transition: 0.5s;
+}
+
+header.sticky {
+	background: #fff;
+	padding: 10px 100px;
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+}
+
+header .logo {
+	font-weight: 700;
+	color: #fff;
+	font-size: 2rem;
+	text-decoration: none;
+}
+
+header.sticky .logo {
+	color: #111;
+}
+
+header .logo span {
+	color: #ff0157;
+}
+
+header ul.navigation {
+	position: relative;
+	display: flex;
+}
+
+header ul.navigation li {
+	list-style: none;
+	margin-left: 30px;
+}
+
+header ul.navigation li a {
+	text-decoration: none;
+	color: #fff;
+	font-weight: 300;
+}
+
+header.sticky ul.navigation li a {
+	color: #111;
 }
