--- a/myVitrine/style.css
+++ b/myVitrine/style.css
@@ -5,6 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: arial;
+	scroll-behavior: smooth;
 }
 
 p {
@@ -140,4 +141,19 @@ section {
 	color: #ff0157;
 	font-weight: 700;
 	font-size: 1.5em;
+}
+
+.row .col50 .imgBx {
+	position: relative;
+	width: 100%;
+	min-height: 300px;
+}
+
+.row .col50 .imgBx img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
