--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -108,6 +108,11 @@ header img {
 	background: #eee;
 	border-radius: 10px;
 	color: #222;
+	cursor: pointer;
+}
+
+.btn:hover {
+	letter-spacing: 2px;
 }
 
 /*section de mes compétences*/
