--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap');
 
-body {
+* {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	font-family: arial;
+}
+
+body {
 	background: linear-gradient(#ddeeee, #eeeeee);
 }
 
@@ -20,6 +23,7 @@ nav {
 	width: 100%;
 	margin: auto;
 	z-index: 10000;
+	transition: 0.5s;
 }
 
 nav.sticky {
@@ -120,8 +124,17 @@ section.section-comp {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 840px;
+	width: 70%;
 	margin: auto;
+	margin-top: 5rem;
+}
+
+section.section-comp table tr {
+	padding: 0.5rem;
+}
+
+section.section-comp table tr td {
+	padding: 1rem;
 }
 
 section.section-comp h1 {
