--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -267,15 +267,28 @@ section.section-comp h1 {
 	justify-content: center;
 	width: 70%;
 	margin: auto;
-	margin-top: -5rem;
+	margin-top: 5rem;
 }
 
 .mesFormations .container h1{
 	font-family: Playfair Display;
-	color: #eee;
+	color: #222;
 	text-align: center;
 	margin-bottom: 4rem;
 	text-transform: uppercase;
+}
+
+.mesFormations .container div input {
+	width: 100%;
+	padding: .4rem 1rem;
+	outline: none;
+	border: none;
+	color: #222;
+	/*background: #ddeeee;*/
+}
+
+.mesFormations .container div input:focus {
+	background: #ddeeee;
 }
 
 .mesFormations .container .text-capitalize{
