--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -150,6 +150,8 @@ section.section-comp h1 {
 	text-align: center;
 	text-transform: uppercase;
 	color: #C60030;
+	margin-bottom: 1.5rem;
+	font-family: Playfair Display;
 }
 
 #ans{
