color: #C60030; grand titre de la section des formations

--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -281,7 +281,7 @@ section.section-comp h1 {
 
 .mesFormations .container h1{
 	font-family: Playfair Display;
-	color: #222;
+	color: #C60030;
 	text-align: center;
 	margin-bottom: 4rem;
 	text-transform: uppercase;
