--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -341,7 +341,7 @@ section#forms div.container div.formation {
 
 #btnform, #btncertif {
 	text-decoration: none;
-	background: #fff;
+	background: #ffffff;
 	padding: 6px 12px;
 	border-radius: 10px;
 	color: #f16059;
