--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -351,3 +351,56 @@ section#forms div.container div.formation {
 	color: #C60030;
 }
 
+/*========================================*/
+.title {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.titleText span {
+	color: #ff0157;
+	font-weight: 700;
+	font-size: 1.5em;
+}
+
+.service .content {
+	display: flex;
+	justify-content: center;
+	flex-direction: row-reverse;
+	flex-wrap: wrap;
+	margin-top: 40px;
+}
+
+.service .content .box {
+	width: 340px;
+	margin: 20;
+	border: 15px solid #fff;
+	box-shadow: 0 5px 35px rgba(0, 0, 0, 0.08);
+}
+
+.service .content .box .imgBx {
+	position: relative;
+	width: 100%;
+	height: 300px;
+}
+
+.service .content .box .imgBx img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.service .content .box .text {
+	padding: 15px 0 5px;
+}
+
+.service .content .box .text h3 {
+	font-weight: 400;
+	color: #111;
+}
