--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -320,7 +320,7 @@ section.section-comp h1 {
 
 section#forms div.container .table tr:nth-child(2),
 section#forms div.container .table tr:nth-child(4){
-	background-color:#eee;
+	background-color:#ffffff;
 }
 
 section#forms div.container .table tr th{
