--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -361,7 +361,7 @@ section#forms div.container div.formation {
 }
 
 .titleText span {
-	color: #ff0157;
+	color: #C60030;/*#ff0157*/
 	font-weight: 700;
 	font-size: 1.5em;
 }
