Animation de mon grand titre header

--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -398,6 +398,7 @@ section#forms div.container div.formation {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	margin: auto;
 }
 
 .service .content .box .text {
