background: linear-gradient(#ddeeee, darkgreen)

--- a/variablesJS/js/style.css
+++ b/variablesJS/js/style.css
@@ -41,7 +41,7 @@ html {
 }
 
 body {
-	background: linear-gradient(#ddeeee, #eeeeee);
+	background: linear-gradient(#ddeeee, darkgreen);
 }
 
 nav {
